tooling/nargo_cli/tests/snapshots/compile_failure/integer_too_large/execute__tests__integer_too_large_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Integer literal is too large
  ┌─ src/main.nr:2:28
  │
2 │     let too_large: Field = 233149999999999999999999999999999999999999999999999999999999923314999999999999999999999999999999999999999999999999999999999923314999999999999999999999999999999999999999999999999999999999;
  │                            ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ value exceeds limit of 21888242871839275222246405745257275088548364400416034343698204186575808495616
  │

error: Expected an expression but found ';'
  ┌─ src/main.nr:2:214
  │
2 │     let too_large: Field = 233149999999999999999999999999999999999999999999999999999999923314999999999999999999999999999999999999999999999999999999999923314999999999999999999999999999999999999999999999999999999999;
  │                                                                                                                                                                                                                      -
  │

Aborting due to 2 previous errors
