tooling/nargo_cli/tests/snapshots/compile_failure/integer_too_large/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Integer literal is too large
  ┌─ src/main.nr:2:28
  │
2 │     let too_large: Field = 233149999999999999999999999999999999999999999999999999999999923314999999999999999999999999999999999999999999999999999999999923314999999999999999999999999999999999999999999999999999999999;
  │                            ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ value exceeds limit of 21888242871839275222246405745257275088548364400416034343698204186575808495616
  │

Aborting due to 1 previous error
